Refactor and align code around new architecture
